--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   http: ^1.3.0
   image_picker: ^1.1.2
   flutter_dotenv: ^5.2.1
+  flutter_svg: ^2.0.17
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +64,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
-  #   - images/a_dot_burr.jpeg
+    - assets/svg/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
